package hsdinflab.swe;

public interface IWeatherObserver {
    void updateWeather(WeatherData data);
}
